[package]
name = 'deppatcher'
authors = ["Yaroslav Bolyukin <iam@lach.pw>"]
version = "0.1.2"
edition = "2021"
description = "Automate patching Cargo.toml files using jsonnet"
license = "MIT"

[dependencies]
cargo_metadata = "0.15.2"
clap = { features = ["derive"], version = "4.0" }
walkdir = "2.3"
toml_edit = "0.18.0"
itertools = "0.10.5"
jrsonnet-evaluator = { features = ["exp-destruct"] , version = "0.5.0-pre95" }
jrsonnet-cli = "0.5.0-pre95"
jrsonnet-stdlib = "0.5.0-pre95"
jrsonnet-gcmodule = "0.3.5"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
regex = "1.7"
guppy = "0.15.2"
cargo-lock = "9.0.0"
