[package]
name = 'deppatcher'
authors = ["Yaroslav Bolyukin <iam@lach.pw>"]
version = "0.1.2"
edition = "2021"
description = "Automate patching Cargo.toml files using jsonnet"
license = "MIT"

[dependencies]
cargo_metadata = "0.15.4"
clap = { features = ["derive"], version = "4.5" }
walkdir = "2.5"
toml_edit = "0.18.1"
itertools = "0.10.5"
jrsonnet-evaluator = { features = ["exp-destruct"] , version = "0.5.0-pre95" }
jrsonnet-cli = "0.5.0-pre95"
jrsonnet-stdlib = "0.5.0-pre95"
jrsonnet-gcmodule = "0.3.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
regex = "1.10"
guppy = "0.15.2"
cargo-lock = "9.0.0"
