[package]
name = 'deppatcher'
authors = ["Yaroslav Bolyukin <iam@lach.pw>"]
version = "0.1.5"
edition = "2021"
description = "Automate patching Cargo.toml files using jsonnet"
license = "MIT"

[dependencies]
cargo_metadata = "0.23.1"
clap = { features = ["derive"], version = "4.5" }
walkdir = "2.5"
toml_edit = "0.25.12+spec-1.1.0"
itertools = "0.14.0"
jrsonnet-evaluator = { features = ["exp-destruct"], version = "0.5.0-pre95" }
jrsonnet-cli = "0.5.0-pre98"
jrsonnet-stdlib = "0.5.0-pre98"
jrsonnet-gcmodule = "0.4.6"
tracing = "0.1.40"
tracing-subscriber = "0.3.20"
regex = "1.10"
guppy = "0.17.26"
cargo-lock = "11.0.1"
